[package]
name = "update-dhcpcd-profile"
description = "replace the data of the given profile with the results of 'dhcpcd -U'"
version = "0.0.0"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/update-dhcpcd-profile"

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
readfilez = "0.1.3"
tempfile = "3.1.0"
