[package]
name = "update-dhcpcd-profile"
description = "replace the data of the given profile with the results of 'dhcpcd -U'"
version = "0.0.0"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/update-dhcpcd-profile"

[dependencies]
anyhow = "1.0"
clap = "2.33"
readfilez = "0.2"
tempfile = "3.1"
